[package]
name = "aftershoot_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
opencv = { version = "0.82.1", default-features = false, features = ["imgproc", "imgcodecs"]}

[build_dependencies]
cmake = "0.1.50"